dot_cargo/bin/runtime/grammars/sources/edoc/test/corpus/section.txt
================================================================================
sections
================================================================================
== Heading ==
=== Sub-heading ===
==== Sub-sub-heading ====

--------------------------------------------------------------------------------

(source
  (section
    (section_marker)
    (section_content)
    (section_marker))
  (section
    (section_marker)
    (section_content)
    (section_marker))
  (section
    (section_marker)
    (section_content)
    (section_marker)))
